test/compile-errors/record-privacy-b.crow
import
	./record-privacy-a

foo void()
	a private-ctor = 0,
	_ = a
	b private-mut = 0, 0, 0
	b.j := 0
	_ = b.j
	b.k := 0
	_ = b.k
	b.l := 0
	_ = b.l
